--- a/ghost/Dockerfile
+++ b/ghost/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghost:0.11.8
 
-RUN apt-get update -y && apt-get install rsync vim -y
+RUN apt-get update -y && apt-get install rsync vim sqlite3 -y
 ADD entrypoint.sh /entrypoint.sh
 EXPOSE 2368
 WORKDIR /usr/src/ghost
